tests/cases/smoke/invalid/class_manual_setup_call.dp
class Fish {
    init var name: str
    setup {
        print(this.name)
    }
}

const F = Fish(name: "nemo")
F.setup()
